# listDomainShares

./: GetDomainShares.py  README.md  pyproject.toml  requirements.txt
getdomainshares/: getdomainshares.py
