[tool.poetry]
name = "getdomainshares"
version = "0.1.0"
description = "List all shares on all computers within the domain"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
impacket = "^0.10.0"
termcolor = "^2.0.1"

[tool.poetry.scripts]
getdomainshares = 'getdomainshares:getdomainshares.main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
